# axum-tut

./: .gitignore  Cargo.toml  init_db.py  populate_db.py  wipe_db.py
.sqlx/: query-2adfb785035eb6821e1b1cb80016d1322014b7b1586ce87710612da5e010f417.json
src/: main.rs
static/css/: hello.css
templates/: avatar.stpl  devlog1.stpl  header.stpl  hello.stpl  login.stpl  login_success.stpl  signup.stpl  signup_success.stpl
